BUG: Fix logout header to not overlap other elements (and scroll with page)

--- a/hackman/static/style.css
+++ b/hackman/static/style.css
@@ -2,6 +2,7 @@ header {
     background-color: #464646;
     padding: 0px;
     margin: 0px;
+    color: #ffffff;
 }
 
 body {
@@ -27,10 +28,6 @@ label {
     display: inline-block;
     width: 160px;
     text-align: right;
-}
-
-span#header {
-    color: #ffffff;
 }
 
 #dsl {
